--- a/app.yaml
+++ b/app.yaml
@@ -12,9 +12,9 @@ handlers:
 
 - url: /images
   static_dir: images
-
+  
 - url: /test
   static_dir: test
 
 - url: /.*
-  script: Home.py
+  script: home.py
